# budget-app

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  init-db.py  init-db.sh  logging-config.json  logging.conf  pyproject.toml  task-definition.json  test.db
backend/alembic/: env.py
backend/alembic/versions/: 277af71fd561_initial_migration.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  aws.py  bank_accounts.py  transactions.py
backend/app/api/v1/endpoints/oauth/: __init__.py  routes.py
backend/app/core/: aws_config.py  config.py  database.py  logging.py  security.py
backend/app/models/domain/: __init__.py  models.py  types.py
backend/app/schemas/: bank_account.py  transaction.py  user.py
backend/app/services/: bank_account_service.py  db_reset_service.py  transaction_service.py  user_service.py
backend/app/services/bank_api/: __init__.py  base.py  monzo.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_auth.py  test_bank_accounts.py  test_transactions.py
backend/tests/api/v1/endpoints/: test_admin.py
backend/tests/api/v1/endpoints/oauth/: test_routes.py
backend/tests/core/: test_logging.py
backend/tests/services/: test_bank_account_service.py  test_db_reset_service.py  test_user_service.py
backend/tests/services/bank_api/: test_monzo.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.css  index.tsx  main.tsx  reportWebVitals.ts
frontend/src/components/: AddAccountModal.tsx  AddTransactionModal.tsx  AnalyticsDashboard.tsx  DateRangeSelector.tsx  EditTransactionModal.tsx  LocalStackStatus.tsx
frontend/src/components/error/: AsyncErrorBoundary.tsx  ErrorBoundary.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/layout/__tests__/: MainLayout.test.tsx
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  button.tsx  card.tsx  select.tsx
frontend/src/context/: AuthContext.tsx  QueryProvider.tsx
frontend/src/context/__tests__/: AuthContext.test.tsx  QueryProvider.test.tsx
frontend/src/features/auth/: LoginForm.tsx
frontend/src/features/auth/__tests__/: LoginForm.test.tsx
frontend/src/features/transactions/: TransactionList.tsx  index.ts
frontend/src/hooks/: useBankAccounts.ts  useFetch.ts  useForm.ts  useQueries.ts  useTransactions.ts
frontend/src/hooks/__tests__/: useBankAccounts.test.tsx  useQueries.test.tsx
frontend/src/lib/: api.ts
frontend/src/lib/api/: client.ts  types.ts
frontend/src/pages/: AccountsPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx  TransactionsPage.tsx
frontend/src/pages/__tests__/: AccountsPage.test.tsx  AnalyticsPage.test.tsx  DashboardPage.test.tsx  LoginPage.test.tsx  SettingsPage.test.tsx
frontend/src/test/: helpers.tsx  setup.ts  smoke.test.tsx  utils.tsx
frontend/src/test/mocks/: handlers.ts
frontend/src/types/: index.ts
frontend/src/utils/: errorHandler.ts  formatting.ts  index.ts
infrastructure/: .gitignore
infrastructure/environments/development/: backend.tf  main.tf  provider.tf  terraform.tfvars  tocals.tf  variables.tf
infrastructure/environments/local/: .terraform.lock.hcl  main.tf  provider.tf  terraform.tfstate
infrastructure/environments/production/: backend.tf  main.tf  terraform.tfvars  variables.tf
infrastructure/environments/staging/: backend.tf  main.tf  provider.tf  terraform.tfvars  variables.tf
infrastructure/modules/budget_app/: main.tf
infrastructure/modules/container/: main.tf  outputs.tf  variables.tf
infrastructure/modules/database/: main.tf  variables.tf
infrastructure/modules/frontend/: main.tf  variables.tf
infrastructure/modules/monitoring/: main.tf  variables.tf
infrastructure/modules/networking/: main.tf  variables.tf
infrastructure/modules/security/: main.tf  outputs.tf  variables.tf
localstack/: init-aws.sh
scripts/: deploy_ecs.sh
